--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -1,18 +1,10 @@
 version: "3.8"
 services:
-  frontend:
-    image: wishlist-app
+  app:
+    build: .
     restart: always
     ports:
       - 9099:3000
     environment:
-      - NEXT_PUBLIC_API_URL=https://example.com/
-  api:
-    restart: always
-    image: wishlist-backend
-    ports:
-      - 9098:9098
-    environment:
-      - NOTION_TOKEN=ntn_xxxxxxxxx
-      - NOTION_DATABASE_ID=1234567
-networks: {}
+      - NOTION_TOKEN=your_token_here
+      - NOTION_DATABASE_ID=your_database_id_here
